# libhal-mock

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: 3.0.0-alpha.1.yml  ci.yml  deploy.yml  presubmit.yml
docs/: doxygen.conf
docs/doxygen/: mainpage.md
include/libhal-mock/: adc.hpp  can.hpp  dac.hpp  input_pin.hpp  interrupt_pin.hpp  motor.hpp  output_pin.hpp  pwm.hpp  servo.hpp  spi.hpp  steady_clock.hpp  testing.hpp  timer.hpp
test_package/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  adc.test.cpp  can.test.cpp  conanfile.txt  dac.test.cpp  input_pin.test.cpp  interrupt_pin.test.cpp  main.test.cpp  motor.test.cpp  output_pin.test.cpp  pwm.test.cpp  servo.test.cpp  spi.test.cpp  steady_clock.test.cpp  testing.test.cpp  timer.test.cpp
